--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# ===========================================
+# OperaLote 3.0 - Sistema de Análise de Infrações
+# ===========================================
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -6,11 +10,48 @@ __pycache__/
 # C extensions
 *.so
 
-# Distribution / packaging
-.Python
+# ===========================================
+# BUILD E DISTRIBUIÇÃO
+# ===========================================
+# PyInstaller build files
 build/
-develop-eggs/
 dist/
+*.spec
+*.manifest
+
+# Executáveis gerados
+*.exe
+
+# Arquivos de instalação
+install.log
+*.rar
+*.zip
+
+# ===========================================
+# ARQUIVOS DE TESTE E DEBUG
+# ===========================================
+# Arquivos de teste específicos do projeto
+test_*.py
+debug_*.py
+diagnostic_test.py
+simple_test.py
+verify_fix.py
+
+# ===========================================
+# AMBIENTE VIRTUAL
+# ===========================================
+.venv/
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+
+# ===========================================
+# PYTHON PACKAGING
+# ===========================================
+.Python
+develop-eggs/
 downloads/
 eggs/
 .eggs/
@@ -27,17 +68,9 @@ share/python-wheels/
 *.egg
 MANIFEST
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
+# ===========================================
+# TESTING E COVERAGE
+# ===========================================
 htmlcov/
 .tox/
 .nox/
@@ -51,96 +84,101 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
+# ===========================================
+# LOGS E TEMPORÁRIOS
+# ===========================================
 *.log
+pip-log.txt
+pip-delete-this-directory.txt
+
+# ===========================================
+# FRAMEWORKS ESPECÍFICOS
+# ===========================================
+# Django
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
-# Flask stuff:
+# Flask
 instance/
 .webassets-cache
 
-# Scrapy stuff:
+# Scrapy
 .scrapy
 
-# Sphinx documentation
+# ===========================================
+# DOCUMENTAÇÃO
+# ===========================================
 docs/_build/
+/site
 
-# PyBuilder
-target/
-
-# Jupyter Notebook
+# ===========================================
+# JUPYTER E IPYTHON
+# ===========================================
 .ipynb_checkpoints
-
-# IPython
 profile_default/
 ipython_config.py
 
-# pyenv
+# ===========================================
+# VERSIONAMENTO PYTHON
+# ===========================================
 .python-version
 
+# ===========================================
+# PACKAGE MANAGERS
+# ===========================================
 # pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
 #Pipfile.lock
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+# PEP 582
 __pypackages__/
 
-# Celery stuff
+# ===========================================
+# TASK QUEUES
+# ===========================================
 celerybeat-schedule
 celerybeat.pid
 
-# SageMath parsed files
+# ===========================================
+# SAGEMATH
+# ===========================================
 *.sage.py
 
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# Project specific
-install.log
-*.exe
-*.rar
-*.zip
-
-# IDE
+# ===========================================
+# IDEs E EDITORES
+# ===========================================
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
+.spyderproject
+.spyproject
+.ropeproject
 
-# OS
+# ===========================================
+# TYPE CHECKERS
+# ===========================================
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pyre/
+
+# ===========================================
+# TRADUÇÕES
+# ===========================================
+*.mo
+*.pot
+
+# ===========================================
+# SISTEMA OPERACIONAL
+# ===========================================
 .DS_Store
 Thumbs.db
+desktop.ini
+
+# ===========================================
+# ARQUIVOS ESPECÍFICOS DO PROJETO
+# ===========================================
+# Manter apenas os arquivos essenciais do projeto
+# Os arquivos de teste e debug são ignorados acima
